# game

./: .gitignore  CMakeLists.txt  README.md  config.json
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
source/: application.cpp  application.h  config.h  entity.h  game.cpp  game.h  glad.c  main.cpp  player.cpp  player.h  shader.h  state.h  window.cpp  window.h  world.cpp  world.h
source/game/: perlin.h  player.cpp  player.h  world.cpp  world.h
source/shader/: basic.frag  basic.vert  checker.frag  checker.vert  colors.frag  colors.vert  mandel.frag  shader.h
source/shaders/: basic.vert  block.frag  block.vert  checker.frag  mandel.frag
source/state/: game_state.cpp  game_state.h  state.cpp  state.h
